fixed mobile sidebar not responsive -fixed video not playing on safari

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,18 @@
   --topbar-height: 200px;
 }
 
+body{
+  overflow: hidden;
+}
+
 *{
   scrollbar-width: none;
 }
+
+.scrollable {
+  -webkit-overflow-scrolling: touch;
+}
+
 
 
 .sidebar-section {
